# CMakeList.txt: CMake-Projekt für "Labor1". Schließen Sie die Quelle ein, und definieren Sie
# projektspezifische Logik hier.
#
cmake_minimum_required (VERSION 3.8)


# Fügen Sie der ausführbaren Datei dieses Projekts eine Quelle hinzu.
add_executable (Labor1 "main.cpp" "main.h" "Labor1.cpp" "Labor1.h")

# TODO: Fügen Sie bei Bedarf Tests hinzu, und installieren Sie Ziele.
